--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MinimalistTodoListV4" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MinimalistTodoListV4" parent="android:Theme.Material.Light.NoActionBar"/>
+    <style name="Theme.MinimalistTodoListV4.MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#000000</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_dark</item>
+        <item name="postSplashScreenTheme">@style/Theme.MinimalistTodoListV4</item>
+    </style>
 </resources>
